--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,11 +1,11 @@
 /*
-Theme Name: nutn-ee
+Theme Name: nutn
 Theme URI: https://walkingho.me
-Version: 1.0.2
+Version: 0.0.1
 Description: NUTN Department of Ecoscience and Ecotechnology wordpress theme
 Author: Walkinghome Studio / Tony
 Author URI: https://walkingho.me
-GitHub Theme URI: https://github.com/wushan/nutn-ee
+GitHub Theme URI: https://github.com/wushan/nutn
 GitHub Branch: master
 */
 
