--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 /*
-Theme Name: nutn-ee
+Theme Name: nutn
 Theme URI: https://walkingho.me
-Version: 1.0.2
+Version: 0.0.1
 Description: NUTN Department of Ecoscience and Ecotechnology wordpress theme
 Author: Walkinghome Studio / Tony
 Author URI: https://walkingho.me
-GitHub Theme URI: https://github.com/wushan/nutn-ee
+GitHub Theme URI: https://github.com/wushan/nutn
 GitHub Branch: master
 */
 /*! normalize.css v4.0.0 | MIT License | github.com/necolas/normalize.css */
