--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,5 +44,6 @@ GitHub Branch: master
 @import "lib/plugins/slidebars.min";
 @import "lib/plugins/jquery.bxslider";
 @import "lib/plugins/magnific-popup";
+@import "lib/plugins/metor-slider";
 //Icons
 @import "lib/icons";
