--- a/assets/css/lib/var/_var.scss
+++ b/assets/css/lib/var/_var.scss
@@ -5,7 +5,7 @@ $gray: #cccccc;
 $lightgray: #dddddd;
 $smokygray: #f2f2f2;
 $darkgray: #666666;
-$darkestgray: #3e3e3e;
+$darkestgray: #4A4A4A;
 
 //Set Main Color
 $main: #1565c0;
