--- a/assets/css/lib/var/_var.scss
+++ b/assets/css/lib/var/_var.scss
@@ -10,7 +10,9 @@ $darkestgray: #4A4A4A;
 //Set Main Color
 $main: #1565c0;
 $yellow: #ffd150;
-
+$blue: #173B63;
+$sadblue: #67788B;
+$lightblue: #DBE5EA;
 //
 $main-dark: #353A53;
 $main-light: lighten($main, 20%);
