--- a/assets/css/lib/main/_320.scss
+++ b/assets/css/lib/main/_320.scss
@@ -1,141 +1,125 @@
-.page-cover {
-	height: 65vh;
-	font-size: 0;
-	position: relative;
-	text-align: center;
-	&:after {
-		content: '';
-		width: 0;
-		height: 100%;
-		display: inline-block;
-		vertical-align: middle;
-	}
-	.page-cover-item {
-		display: inline-block;
-		vertical-align: middle;
-		font-size: 1rem;
-	}
-	.background {
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center;
-		z-index: -1;
-		&:after {
-			content: '';
-			display: block;
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			background-color: rgba($black, .6);
-		}
-	}
+.home, .page {
+	.page-container {
+
+	}	
 }
-.page-cover-item {
-	a {
-		color: $white;
-		// font-weight:
-	}
-	.article-header {
-		.meta {
-			.post-categories {
-				margin: 0;
-				padding: 0;
-				list-style-type: none;
+//News
+.news-wrapper {
+	@extend .clr;
+	.block {
+		box-sizing: border-box;
+		border-right: 1px solid $smokygray;
+		.title {
+			border-bottom: 1px solid $smokygray;
+			padding: 0 1em;
+			font-size: 1.4em;
+			font-weight: bold;
+			height: 50px;
+			line-height: 50px;
+			box-sizing: border-box;
+			width: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+		&:last-child {
+			background-color: $smokygray;
+			.title {
+				color: $blue;
+				font-size: 1.1em;
+				background-color: $lightblue;
+			}
+			.post-title {
+				a {
+					color: $darkestgray;
+					font-size: .9em;
+				}
+			}
+			ul {
 				li {
-					display: inline-block;
-					vertical-align: middle;
-					a {
-						display: block;
-						border: 1px solid $white;
-						padding: .2em 1em;
-						text-transform: uppercase;
-						font-size: .875em;
-						font-weight: 600;
+					&:hover {
+						background-color: $white;
+						color: $black;
+						.post-title {
+							a {
+								color: $black;
+							}
+						}
 					}
 				}
 			}
 		}
-	}
-	.entry-content {
-		color: rgba($white, .6);
-		// font-size: .875em;
-	}
-}
-.home, .page {
-	.page-container {
-		padding: 2em 0;
-	}	
-}
-
-.masonry-inner {
-	@extend .clr;
-	.masonry-item {
-		img {
+		ul {
+			margin: 0;
+			padding: 0;
+			list-style-type: none;
+			li {
+				padding: .8em 1em;
+				border-bottom: 1px solid $smokygray;
+				transition: .4s all ease-out;
+				&:hover {
+					background-color: $sadblue;
+					color: $white;
+					.meta {
+						opacity: 1;
+					}
+					.post-title {
+						a {
+							color: $white;
+						}
+					}
+				}
+			}
+		}
+		//POST LIST
+		.meta, .category {
+			display: inline-block;
+			vertical-align: middle;
+		}
+		.meta {
+			opacity: .5;
+			font-size: .9em;
+			width: 110px;
+		}
+		.type {
+			padding-right: .3em;
+		}
+		time {
+		}
+		.type, time {
+			display: inline-block;
+			vertical-align: middle;
+		}
+		.post-title {
+			font-weight: bold;
 			width: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
-		.entry-thumbnail {
+		.category {
+			font-size: .9em;
+			padding-right: .5em;
 			a {
-				display: block;
-				cursor: pointer;
+				display: inline-block;
+				vertical-align: middle;
 			}
 		}
-		.entry-title {
-			h3 {
-				margin: 0 0 .5em 0;
+		.post-title {
+			display: block;
+			a {
+				color: $black;
 			}
 		}
-		.entry-meta {
-			margin: .5em 0;
-			font-size: .875em;
-			color: $lightgray;
-			text-transform: uppercase;
-		}
-	}
-	.masonry-sizer, .masonry-item {
-		width: 46%;
-		@include breakpoint(768px) {
-			width: 30%
-		}
-		@include breakpoint(1280px) {
-			width: 18%;
-		}
-	}
-	.gutter-sizer {
-		width: 8%;
-		@include breakpoint(768px) {
-			width: 5%;
-		}
-		@include breakpoint(1280px) {
-			width: 2.5%;
-		}
+
 	}
 }
-
 
 ///Single
 .single {
-	.page-cover {
-		height: 85vh;
-	}
-	.entry-content {
-		color: $darkgray;
-		font-size: 1.2em;
-		text-align:justify;
-	}
-	.entry-meta {
-		padding: .5em 2em;
-		background-color: $smokygray;
-		color: $darkgray;
-		font-family: 'proxima-nova', $sans-serif;
-	}
+	
 }
+
 //Comments
 #comments {
 	padding: 0 2em;
