--- a/assets/css/lib/main/_768.scss
+++ b/assets/css/lib/main/_768.scss
@@ -1,2 +1,24 @@
 @include susy-breakpoint(768px, 12) {
+	.news-wrapper {
+		.block {
+			&:first-child {
+				
+				.post-title {
+					width: calc( 100% - 210px );
+				}
+			}
+			&:last-child {
+				.meta {
+					width: 90px;
+				}
+				.post-title {
+					width: calc( 100% - 100px );
+				}
+			}
+			.post-title {
+				display: inline-block;
+				vertical-align: middle;
+			}
+		}
+	}
 }
