working on Archives

--- a/assets/css/lib/main/_320.scss
+++ b/assets/css/lib/main/_320.scss
@@ -129,3 +129,65 @@
 		color: $main-dark;
 	}	
 }
+
+//Separator
+
+.separator {
+	span {
+		display: block;
+		height: 6px;
+		background-color: $gray;
+		@include gallery(3 of 12 0);
+		&:first-child {
+			background-color: #50E3C2;
+		}
+		&:nth-child(2) {
+			background-color: #B8E986;
+		}
+		&:nth-child(3) {
+			background-color: #4A90E2;
+		}
+		&:last-child {
+			background-color: #9013FE;
+		}
+	}
+}
+//Footer
+.footer-inner {
+	padding: 2em 0;
+	background-color: $smokygray;
+	@extend .clr;
+  .block {
+  	margin-bottom: 1em;
+  	&:last-child {
+  		text-align: center;
+  		a {
+  			display: inline-block;
+  			vertical-align: middle;
+  			opacity: .5;
+  			&:hover {
+  				opacity: 1;
+  			}
+  		}
+  	}
+  }
+  .contact {
+  	font-size: .9em;
+  	a {
+  		color: $colorblue;
+  		&:visited {
+  			// color: $lightblue;
+  		}
+  	}
+  }
+  h3 {
+  	margin: 0;
+  }
+}
+.copyrights {
+	text-align: center;
+	background-color: $darkgray;
+	color: $white;
+	font-size: .9em;
+	padding: .5em 1em;
+}
