--- a/assets/css/lib/var/_var.scss
+++ b/assets/css/lib/var/_var.scss
@@ -11,6 +11,7 @@ $darkestgray: #4A4A4A;
 $main: #1565c0;
 $yellow: #ffd150;
 $blue: #173B63;
+$colorblue: #4a90e2;
 $sadblue: #67788B;
 $lightblue: #DBE5EA;
 //
