--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,5 +45,6 @@ GitHub Branch: master
 @import "lib/plugins/jquery.bxslider";
 @import "lib/plugins/magnific-popup";
 @import "lib/plugins/metor-slider";
+@import "lib/plugins/ngg";
 //Icons
 @import "lib/icons";
