--- a/assets/css/lib/nav/_320.scss
+++ b/assets/css/lib/nav/_320.scss
@@ -1,6 +1,49 @@
 #header {
   position: relative;
 }
+//SEARCH FORM
+.search-form-wrapper {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba($black, .8);
+  z-index: 999;
+  text-align: center;
+  font-size: 0;
+  color: $white;
+  &.active {
+    display: block;
+  }
+  &:before {
+    content: '';
+    width: 0;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .search-form-inner {
+    font-size: 1rem;
+    width: 50%;
+    min-width: 300px;
+    margin: auto;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .close-btn {
+    position: absolute;
+    top: 4rem;
+    right: 4rem;
+    opacity: .5;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+//NAVIGATION
 #navigation {
   position: absolute;
   bottom: 0;
@@ -8,6 +51,7 @@
   right: 0;
   z-index: 999;
   .navigation-inner {
+    box-sizing: border-box;
     padding: 1em;
     @extend .clr;
   }
@@ -15,6 +59,10 @@
     .navigation-inner {
       background-color: $darkestgray;
     }
+  }
+  .menu {
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -25,7 +73,9 @@
 }
 
 #brand {
-  @include span(3 of 12);
+  width: 250px;
+  float: left;
+  // @include span(3 of 12);
   .brand-title {
     a {
       display: block;
@@ -41,8 +91,16 @@
 nav {
   display: none;
   text-align: right;
-  @extend .clr;
-  @include span(9 of 12 last);
+  margin-left: 250px;
+  // @include span(9 of 12 last);
+  .menu-primary-nav-container {
+    width: calc( 100% - 40px );
+    float: left;
+  }
+  .search-trigger {
+    display: inline-block;
+    vertical-align: middle;
+  }
   //Normal
   ul {
     font-size: 0;
@@ -51,12 +109,12 @@ nav {
       display: inline-block;
       vertical-align: middle;
       font-size: 1rem;
-      margin-right: 10px;
+      margin-right: 4px;
       a {
         display: block;
         color: $white;
         font-size: 1.1em;
-        padding: 0 1em;
+        padding: 0 .5em;
       }
     }
   }
@@ -96,6 +154,27 @@ nav {
     img {
       display: inline-block;
       vertical-align: middle;
+    }
+  }
+}
+//Footer
+.menu-footer-nav-container {
+  text-align: center;
+  ul {
+    margin:0;
+    padding: 1em 0;
+    list-style-type: none;
+    li {
+      display: inline-block;
+      vertical-align: middle;
+      border-right: 1px solid $gray;
+      a {
+        display: block;
+        padding: 0 1em;
+      }
+      &:last-child {
+        border: 0;
+      }
     }
   }
 }
