--- a/assets/css/lib/var/com/_fonts.scss
+++ b/assets/css/lib/var/com/_fonts.scss
@@ -1,7 +1,9 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
 html {
 	font-family: $sans-serif;
 	font-size: 100%;
-	line-height: 1.6;
+	line-height: 1.8;
+	color: $darkgray;
 }
 
 //Typography	
@@ -45,10 +47,14 @@ html {
 //Font  Basics
 
 h1,h2,h3 {
-	font-weight: 300;
+	font-weight: 500;
+	margin-top: 0;
+}
+h1,h2,h3,h4,h5,h6 {
+	color: $black;
 }
 h1 {
-	font-size: 3em;
+	font-size: 2.25em;
 	line-height: 1.2;
 }
 
