--- a/assets/css/lib/var/com/_form.scss
+++ b/assets/css/lib/var/com/_form.scss
@@ -1,6 +1,7 @@
 //ControlGroup
 .controlgroup {
   margin-bottom: .5em;
+  position: relative;
   @extend .clr;
   label {
     font-size: 1.1em;
@@ -55,7 +56,6 @@ input,input[type=search] {
   height: 44px;
   padding: 0 1em;
   outline: none;
-
   &:focus {
     border: 1px solid $main-dark;
     background-color: $main-dark;
@@ -70,6 +70,12 @@ input,input[type=search] {
     display: inline-block;
     vertical-align: middle;
     width: calc( 100% - 93px );
+  }
+  &+button {
+    position: absolute;
+    right: -2px;
+    top: 0;
+    border-radius: 0 3px 3px 0;
   }
 }
 //Select
