--- a/assets/css/lib/var/_var.scss
+++ b/assets/css/lib/var/_var.scss
@@ -14,6 +14,7 @@ $blue: #173B63;
 $colorblue: #4a90e2;
 $sadblue: #67788B;
 $lightblue: #DBE5EA;
+$oceanblue: #253459;
 //
 $main-dark: #353A53;
 $main-light: lighten($main, 20%);
