--- a/assets/css/lib/nav/_320.scss
+++ b/assets/css/lib/nav/_320.scss
@@ -44,6 +44,14 @@
 }
 
 //NAVIGATION
+.category, .single {
+  #navigation {
+    position: relative;
+    .navigation-inner {
+      background-color: #4a4a4a;
+    }
+  }
+}
 #navigation {
   position: absolute;
   bottom: 0;
@@ -54,6 +62,7 @@
     box-sizing: border-box;
     padding: 1em;
     @extend .clr;
+    box-shadow: 0 3px 6px rgba($black,.33);
   }
   .is-sticky {
     .navigation-inner {
