--- a/assets/css/lib/main/_320.scss
+++ b/assets/css/lib/main/_320.scss
@@ -230,6 +230,12 @@
 		width: 0;
 		height: 100%;
 	}
+	&.huge {
+		height: 60vh;
+		.header-cover-inner {
+			text-align: center;
+		}
+	}
 	.header-cover-inner {
 		font-size: 1.2rem;
 		display: inline-block;
@@ -264,7 +270,7 @@
 					background-color: $oceanblue;
 				}
 			}
-			&.current-cat {
+			&.current-cat,&.current_page_item {
 				&>a {
 					color:$white;
 					background-color: $oceanblue;
@@ -427,6 +433,92 @@ nav.pagination {
 			vertical-align: middlem;
 		}
 	}
+	.entry-attachments {
+		.attachments-title {
+			border-top: 1px solid $gray;
+
+			h3 {
+				margin: 0;
+				background-color: $darkestgray;
+				padding: 0 1em;
+				display: inline-block;
+				vertical-align: middle;
+				color: $white;
+				font-weight: 300;
+			}
+		}
+		ul {
+			margin: 0 0 0 2em;
+			padding: 1em 0;
+			list-style-type: none;
+			li {
+				border-bottom: 1px solid $lightgray;
+				padding: .5em 0;
+				@extend .clr;
+				.name {
+					float: left;
+					width: calc( 100% - 100px );
+				}
+				.download {
+					float: right;
+					text-align: right;
+					width: 100px;
+				}
+				a {
+					color: $colorblue;
+					display: block;
+				}
+			}
+		}
+	}
+	&.regulation {
+		.entry-attachments {
+			ul {
+				margin: 0;
+				padding: 0;
+				li {
+					color: $colorblue;
+				}
+			}
+		}
+	}
+}
+// .ngg-album-compact {
+// 	@include gallery(3 of 12);
+// }
+// .ngg-album-compactbox {
+// 	.Thumb {
+// 		width: 100%;
+// 	}
+// }
+// .ngg-album-compact h4 .ngg-album-desc {
+// 	height: auto;
+// 	text-align: center;
+// }
+
+.text-separator {
+	position: relative;
+	p {
+		background-color: $colorblue;
+		color: $white;
+		display: inline-block;
+		vertical-align: middle;
+		padding: .3em 1em;
+		margin-top: 0;
+		&:after {
+			content: '';
+			width: 100%;
+			height: 1px;
+			background-color: $colorblue;
+			position: absolute;
+			top: 50%;
+			left: 0;
+			z-index: -1;
+		}
+	}
+}
+
+.page-inner {
 	.entry-attachments {
 		.attachments-title {
 			border-top: 1px solid $gray;
